unpackaged/main/default/objects/srlg_Employment_History__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Military Service Details</fullName>
            </value>
            <value>
                <fullName>Firefighting Service Details</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>