unpackaged/main/default/objects/srlg_Employment_History__c/fields/Current_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupation__c</fullName>
    <label>Current Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>