unpackaged/main/default/objects/srlg_Employment_History__c/fields/Current_Occupation_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupation_Start_Date__c</fullName>
    <label>Current Occupation Start Date</label>
    <type>Date</type>
</CustomField>