unpackaged/main/default/objects/srlg_Employment_History__c/fields/Current_Occupation_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Current_Occupation_StartDate__c</fullName>
    <label>Current Occupation StartDate</label>
    <type>Date</type>
</CustomField>