unpackaged/main/default/objects/srlg_Employment_History__c/fields/Intake__c.field-meta.xml
<CustomField>
    <fullName>Intake__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Intake</label>
    <referenceTo>litify_pm__Intake__c</referenceTo>
    <relationshipLabel>Employment Histories</relationshipLabel>
    <relationshipName>Employment_Histories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>