unpackaged/main/default/objects/srlg_Employment_History__c/fields/Lived_On_Base__c.field-meta.xml
<CustomField>
    <fullName>Lived_On_Base__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lived On Base</label>
    <type>Checkbox</type>
</CustomField>