unpackaged/main/default/objects/srlg_Employment_History__c/fields/Occupation_Before_Dx__c.field-meta.xml
<CustomField>
    <fullName>Occupation_Before_Dx__c</fullName>
    <label>Occupation Before Dx</label>
    <length>255</length>
    <type>Text</type>
</CustomField>