unpackaged/main/default/objects/srlg_Employment_History__c/fields/Previous_Occupation__c.field-meta.xml
<CustomField>
    <fullName>Previous_Occupation__c</fullName>
    <label>Previous Occupation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>