unpackaged/main/default/objects/srlg_Employment_History__c/fields/Previous_Occupation_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Previous_Occupation_EndDate__c</fullName>
    <label>Previous Occupation EndDate</label>
    <type>Date</type>
</CustomField>