unpackaged/main/default/objects/srlg_Employment_History__c/fields/Previous_Occupation_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Previous_Occupation_StartDate__c</fullName>
    <label>Previous Occupation StartDate</label>
    <type>Date</type>
</CustomField>