unpackaged/main/default/objects/srlg_Employment_History__c/fields/Worked_On_Base__c.field-meta.xml
<CustomField>
    <fullName>Worked_On_Base__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Worked On Base</label>
    <type>Checkbox</type>
</CustomField>